--- a/index.html
+++ b/index.html
@@ -1339,18 +1339,11 @@
   </style>
 </head>
 <body>
-  <!-- Decoraciones florales fijas -->
-  <div class="decoracion flor-1"></div>
-  <div class="decoracion flor-2"></div>
-  <div class="decoracion flor-3"></div>
-  <div class="decoracion flor-4"></div>
-  <div class="decoracion flor-5"></div>
-
-  <div class="wrapper">
+    <div class="wrapper">
     <!-- PORTADA INICIAL -->
     <div class="portada">
-      <h1 class="portada-titulo">¡Te Invitamos!</h1>
-      <p class="portada-subtitulo">A la boda Portillo Sánchez</p>
+      <h1 class="portada-titulo">¡Te Invitamos! <br> A nuestra boda</h1>
+      <p class="portada-subtitulo">Familia Portillo Sánchez</p>
       
       <img 
         src="https://dl.dropboxusercontent.com/scl/fi/tnzuxtkzrezg4kkqxsl4t/WhatsApp-Image-2025-12-20-at-11.08.50-PM.jpeg?rlkey=sgy8hpajrys9rj8asfs2x7iww&st=q379rh3t&dl=1" 
@@ -1806,4 +1799,5 @@
     });
   </script>
 </body>
+
 </html>
