--- a/index.html
+++ b/index.html
@@ -1534,7 +1534,7 @@
             </div>
           </div>
 
-          <!-- Formulario -->
+          <!-- Formulario 
           <div class="formulario" id="formulario">
             <div id="mensaje-exito" class="mensaje-exito" style="display: none;">
               <i class="fas fa-check-circle" style="font-size:2rem; margin-bottom:10px;"></i><br>
@@ -1568,7 +1568,7 @@
                 </div>
               </div>
 
-              <!-- Acompañante -->
+              
               <div id="acompananteSection" style="display: none;">
                 <div class="grupo-formulario">
                   <label class="etiqueta">¿Llevarás acompañante?</label>
@@ -1601,7 +1601,7 @@
             </form>
           </div>
         </div>
-
+-->
         <!-- Footer -->
         <div class="footer">
           Si tienes consultas, puedes escribir por WhatsApp directamente a la
@@ -1801,3 +1801,4 @@
 </body>
 
 </html>
+
